--- a/Reston.EProc.Runner.IIS/View/dashboard.html
+++ b/Reston.EProc.Runner.IIS/View/dashboard.html
@@ -519,8 +519,8 @@
                 method: "GET",
                 success: function (data) {
                     if (data == 1) {
-                        $("#persetujuan-pengadaan").closest('tr').remove();
-                        $("#persetujuan-pemenang").closest('tr').remove();
+                        $("#pengadaan-disetujui").closest('tr').remove();
+                        $("#pemenang-disetujui").closest('tr').remove();
                         $("#monitor-selection").closest('tr').remove();
                     }
                 }
