--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -744,7 +744,6 @@
                                                                                 </label>
                                                                             </div>
                                                                         </div>
-
                                                                     </div>
                                                                     <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
@@ -868,6 +867,14 @@
                                                                                         <div id="BeritaAcaraKlarifikasiLanjutan" attr="BeritaAcaraKlarifikasiLanjutan" action="/api/PengadaanE/UploadFile?tipe=BeritaAcaraKlarifikasiLanjutan" class="dropzone"></div>
                                                                                     </div>
                                                                                 </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="col-md-2 only-ga-team">
+                                                                            <div class="form-group">
+                                                                                <label class="title">
+                                                                                    Unduh Berita Acara
+                                                                                    <a class="download-berkas" attr1="berkas-klarifikasi-lanjutan"><i class="fa fa-fw  fa-download"></i></a>
+                                                                                </label>
                                                                             </div>
                                                                         </div>
                                                                     </div>
