Pengadaan Terbuka Detail

--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -966,14 +966,14 @@
                                                                                 </div>
                                                                             </div>
                                                                         </div>
-                                                                        <!--<div class="col-md-2 only-ga-team">
+                                                                        <div class="col-md-2 only-ga-team">
                                                                             <div class="form-group">
                                                                                 <label class="title">
                                                                                     Unduh Berita Acara
                                                                                     <a class="download-berkas" attr1="berkas-klarifikasi-lanjutan"><i class="fa fa-fw  fa-download"></i></a>
                                                                                 </label>
                                                                             </div>
-                                                                        </div>-->
+                                                                        </div>
 
                                                                     </div>
                                                                     <div class="row only-ga-team">
