Report dan Pengadaan Terbuka

--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -399,7 +399,7 @@
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="col-md-8">
-                                                                            <div class="row only-ga-team">
+                                                                            <!--<div class="row only-ga-team">
                                                                                 <div class="col-md-8">
                                                                                     <div class="form-group">
                                                                                         <label class="title only-pic-disabled">Tanggal Berita Acara</label>
@@ -409,24 +409,16 @@
                                                                                         <button class="btn btn-success pull-left save-tgl-ba action-pelaksanaan" attr1="input-ba-pendaftaran" attr2="BeritaAcaraPendaftaran">Simpan</button>
                                                                                     </div>
                                                                                 </div>
-                                                                            </div>
-                                                                            <div class="row">
+                                                                            </div>-->
+                                                                            <!--<div class="row">
                                                                                 <div class="col-md-12">
                                                                                     <div class="form-group">
                                                                                         <label class="title">Unggah Berita Acara</label>
                                                                                         <div id="BeritaAcaraPendaftaran" attr="BeritaAcaraPendaftaran" action="/api/PengadaanE/UploadFile?tipe=BeritaAcaraPendaftaran" class="dropzone"></div>
                                                                                     </div>
                                                                                 </div>
-                                                                            </div>
+                                                                            </div>-->
                                                                         </div>
-                                                                        <!--<div class="col-md-2">
-                                                                            <div class="form-group">
-                                                                                <label class="title">
-                                                                                    Unduh Berita Acara
-                                                                                    <a class="download-dokumen download-berkas " attr1="berkas-pendaftaran"><i class="fa fa-fw  fa-download"></i></a>
-                                                                                </label>
-                                                                            </div>
-                                                                        </div>-->
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="col-md-4">
